Fixed z-index

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer {
     padding-top: 20px;
     /* Optional: space from the top */
     transition: left 0.3s ease;
-    z-index: 3;
+    z-index: 15;
     border-left: 1px solid transparent;
     /* Make the left border transparent initially */
 }
@@ -424,7 +424,7 @@ footer {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10;
+    z-index: 3;
     width: 50px;
     height: 50px;
     display: flex;
